[gd_scene load_steps=16 format=2]

[ext_resource path="res://FOTD Assets/PNG/Menus/WoodGamePanel/Wood_Game_Panel_FLAT.png" type="Texture" id=1]
[ext_resource path="res://FOTD Assets/Deanna.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://FOTD Assets/PNG/Menus/settingbg.png" type="Texture" id=3]
[ext_resource path="res://Credits.gd" type="Script" id=4]
[ext_resource path="res://Menu.gd" type="Script" id=5]
[ext_resource path="res://Select Map.gd" type="Script" id=6]
[ext_resource path="res://FOTD Assets/PNG/Menus/map1.PNG" type="Texture" id=7]
[ext_resource path="res://Deanna.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://FOTD Assets/PNG/Menus/map2.PNG" type="Texture" id=9]
[ext_resource path="res://FOTD Assets/PNG/Menus/map3.PNG" type="Texture" id=10]
[ext_resource path="res://Popup.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = -103.876
margin_top = -65.1028
margin_right = 1132.12
margin_bottom = 661.897
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 315.381
margin_top = 74.2063
margin_right = 701.381
margin_bottom = 260.206
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Figures of the Dead"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 401.498
margin_top = 289.531
margin_right = 623.498
margin_bottom = 342.531
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 400.0
margin_top = 447.797
margin_right = 622.0
margin_bottom = 500.797
custom_fonts/font = SubResource( 2 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 397.755
margin_top = 518.512
margin_right = 619.755
margin_bottom = 571.512
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 400.506
margin_top = 369.156
margin_right = 622.506
margin_bottom = 422.156
custom_fonts/font = SubResource( 3 )
text = "Select Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureRect" parent="."]
visible = false
margin_left = -390.643
margin_top = -215.316
margin_right = 1359.36
margin_bottom = 772.684
texture = ExtResource( 3 )
expand = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Credits"]
anchor_right = 0.32
anchor_bottom = 0.264
margin_left = 408.98
margin_top = 290.326
margin_right = 778.46
margin_bottom = 546.998
custom_fonts/font = SubResource( 4 )
text = "Font
https://www.1001fonts.com/deanna-font.html
Map
https://szadiart.itch.io/rogue-fantasy-catacombs
inventory
https://jehal.itch.io/24-survival-pixel-art-icons?download
Zombie
https://xl01.itch.io/5-different
Player
https://opengameart.org/content/animated-top-down-survivor-player
Creator
!Reece Heald!
!Credits to Chabane!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Credits"]
margin_left = 769.549
margin_top = 718.617
margin_right = 991.549
margin_bottom = 771.617
custom_fonts/font = SubResource( 2 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select Map" type="TextureRect" parent="."]
visible = false
margin_left = -392.104
margin_top = -216.375
margin_right = 1357.9
margin_bottom = 771.625
texture = ExtResource( 3 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Map1" type="TextureRect" parent="Select Map"]
margin_left = 480.265
margin_top = 387.144
margin_right = 731.265
margin_bottom = 534.144
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Select Map"]
margin_left = 491.166
margin_top = 552.623
margin_right = 713.166
margin_bottom = 605.623
custom_fonts/font = SubResource( 2 )
text = "Select"
__meta__ = {
"_editor_description_": ""
}

[node name="Map2" type="TextureRect" parent="Select Map"]
margin_left = 762.429
margin_top = 388.088
margin_right = 1013.43
margin_bottom = 535.088
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="Button2" type="Button" parent="Select Map"]
margin_left = 777.22
margin_top = 551.448
margin_right = 999.218
margin_bottom = 604.448
custom_fonts/font = SubResource( 2 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Map3" type="TextureRect" parent="Select Map"]
margin_left = 1050.75
margin_top = 390.758
margin_right = 1301.75
margin_bottom = 537.758
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button4" type="Button" parent="Select Map"]
pause_mode = 2
margin_left = 1061.14
margin_top = 555.293
margin_right = 1283.14
margin_bottom = 608.293
custom_fonts/font = SubResource( 2 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button3" type="Button" parent="Select Map"]
margin_left = 769.549
margin_top = 718.617
margin_right = 991.549
margin_bottom = 771.617
custom_fonts/font = SubResource( 2 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Popup" type="Popup" parent="."]
margin_left = 349.492
margin_top = 235.99
margin_right = 680.492
margin_bottom = 442.99
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_left = -1.0
margin_top = 5.0
margin_right = 341.0
margin_bottom = 205.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
margin_left = 4.00452
margin_top = 10.6787
margin_right = 334.005
margin_bottom = 195.679
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You must select a map
Press C To close"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Credits/Button4" to="Credits" method="_on_Button4_pressed"]
[connection signal="pressed" from="Select Map/Button" to="Select Map" method="_on_Button_pressed"]
[connection signal="pressed" from="Select Map/Button2" to="Select Map" method="_on_Button2_pressed"]
[connection signal="pressed" from="Select Map/Button4" to="Select Map" method="_on_Button4_pressed"]
[connection signal="pressed" from="Select Map/Button3" to="Select Map" method="_on_Button3_pressed"]
